efeitos de hover e direcionamento dos links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <li>
 
-                <a href="#">
+                <a href="tarefas.html">
                     <img src="./img/foguete.png" class="icone-i" alt="">
                     <h3>Objetivos</h3>
                 </a>
@@ -47,7 +47,7 @@
 
             </li>
             <li>
-                <a href="#">
+                <a href="tarefas.html">
                     <img src="./img/calendario.png" class="icone-i" alt="">
                     <h3>Calendario</h3>
                 </a>
@@ -55,7 +55,7 @@
             </li>
             <li>
 
-                <a href="#">
+                <a href="tarefas.html">
                     <img src="./img/apresentacao.png" class="icone-i" alt="">
                     <h3>Grafico</h3>
                 </a>
@@ -72,26 +72,14 @@
 
         <div class="btn-ladding">
             <a href="tarefas.html"><button>TAREFAS</button></a>
-            <a href=""><button>CONTATO</button></a>
+            <a href="tarefas.html"><button>CONTATO</button></a>
         </div>
     </div>
 
     <div class="interface">
         <section class="ladding-page"></section>
-
-
-   
         
     </div>
-
-
-
-
-
-
-
-
-
 
 </body>
 </html>
