--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="interface">
-        <section class="ladding-page"></section>
+        <section class="ladding-page"><img src="./img/FUNDO-TODOLIST.png" alt=""></section>
         
     </div>
 
